--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,8 @@ body::-webkit-scrollbar-thumb {
 
 body {
   background-color: #f7f7f7;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
 }
 
 /* NavBar */
@@ -96,18 +98,10 @@ body {
 .logo-container {
   display: flex;
   align-items: center;
-  padding: 10px 10px 10px 20px;
+  padding: 20px 10px 19px 25px;
   background-color: #2c3e50;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
-
-/* .logo {
-  width: 50px;
-  height: auto;
-  margin-top: -10px !important;
-  margin-right: 10px;
-  margin-left: 5px !important;
-} */
 
 .icon {
   font-size: 30px;
@@ -116,7 +110,7 @@ body {
 }
 
 .logo-text {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   color: #fff;
 }
@@ -150,13 +144,15 @@ body {
 .menu-item-btn:hover {
   background-color: #f7f7f7;
   border-radius: 5px;
-  border-bottom: 1px solid #1ab89d;
   transform: translateX(5px) scale(1.05);
 }
 
 .menu-item-btn i {
+  flex-shrink: 0;
+  width: 30px;
+  text-align: center;
   margin-right: 10px;
-  font-size: 28px;
+  font-size: 20px;
   transition: color 0.3s ease, transform 0.3s ease;
 }
 
@@ -226,16 +222,8 @@ body {
 
   .logo-container {
     justify-content: center;
-    padding: 10px;
+    padding: 23px 10px 22px 12px;
   }
-  /* 
-  .logo {
-    margin-right: 0;
-    margin-bottom: 5px;
-    margin-top: -10px !important;
-    margin-right: 10px;
-    margin-left: 5px !important;
-  } */
 
   .icon {
     font-size: 24px;
@@ -259,7 +247,7 @@ body {
   .menu-item-btn i {
     margin-right: 0;
     margin-bottom: 5px;
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .menu-item-btn span {
@@ -544,7 +532,9 @@ body {
 /* Form */
 
 .container {
-  margin-top: 20px;
+  margin: 0%;
+  max-width: 100%;
+  margin-top: 15px;
 }
 
 .btn-back {
@@ -611,22 +601,21 @@ strong-form {
 textarea:focus,
 input:focus,
 input[type]:focus {
-  border-color: #2a3f54;
-  box-shadow: 0 1px 1px #5087c15a inset, 0 0 20px #2a3f54;
+  border-color: transparent;
+  box-shadow: 0 0px 0px inset, 0 0 10px #2a3f5480;
   outline: 0 none;
 }
 
 textarea:focus,
 select:focus,
 select[type]:focus {
-  border-color: #2a3f54 !important;
-  box-shadow: 0 1px 1px #5087c15a inset, 0 0 20px #2a3f54 !important;
+  border-color: transparent !important;
+  box-shadow: 0 0px 0px inset, 0 0 10px #2a3f5480 !important;
   outline: 0 none !important;
 }
 
 .form-control {
-  background-color: #5087c15a;
-  border-color: #2a3f54;
+  background-color: #5087c11d;
   color: #000;
 }
 
@@ -636,8 +625,7 @@ select[type]:focus {
 }
 
 .form-select {
-  background-color: #5087c15a;
-  border-color: #2a3f54;
+  background-color: #5087c11d;
 }
 
 .form-select:focus {
@@ -655,16 +643,17 @@ select[type]:focus {
 /* Checkbox */
 .form-check-label {
   color: #000000 !important;
+  transition: color 0.3s ease;
 }
 
 .form-check-input:checked {
   background-color: #2a3f54;
-  border: 1px solid #2a3f54;
+  transition: background-color 0.3s ease, border 0.3s ease;
 }
 
 .form-check-input {
-  background-color: #5087c15a;
-  border: 1px solid #2a3f54;
+  background-color: #5087c11d;
+  transition: background-color 0.3s ease;
 }
 
 .form-check-input:checked + .form-check-label {
@@ -715,9 +704,9 @@ select[type]:focus {
   border-right-color: transparent;
   border-left-color: transparent;
   border-bottom-color: #2a3f54;
-  -webkit-box-shadow: 0 10px 6px -6px #5087c15a;
-  -moz-box-shadow: 0 10px 6px -6px #5087c15a;
-  box-shadow: 0 15px 20px -10px #5087c15a;
+  -webkit-box-shadow: 0 10px 6px -6px #5087c11d;
+  -moz-box-shadow: 0 10px 6px -6px #5087c11d;
+  box-shadow: 0 15px 20px -10px #5087c11d;
 }
 
 .eliminar-img {
@@ -804,11 +793,19 @@ select[type]:focus {
 /* para botones en general */
 
 /* Estilos para modal general */
-#headerm-general {
-  border-bottom-color: #2a3f54;
+#headerm-general,
+#headerm-generalF,
+#headerm-generalP,
+#headerm-generalNP,
+#headerm-generalA {
+  border-bottom-color: #00000023;
 }
 
-#closem-general {
+#closem-general,
+#closem-generalF,
+#closem-generalP,
+#closem-generalNP,
+#closem-generalA {
   margin-right: -16px;
   margin-bottom: -5px;
   background-color: transparent;
@@ -824,9 +821,13 @@ select[type]:focus {
   color: #000;
 }
 
-#contenidom-general {
+#contenidom-general,
+#contenidom-generalF,
+#contenidom-generalP,
+#contenidom-generalNP,
+#contenidom-generalA {
   margin-top: 0px;
-  margin-bottom: -10px;
+  margin-bottom: -60px;
 }
 
 .modal-header {
@@ -888,49 +889,13 @@ select[type]:focus {
   background-color: #fff;
   padding: 20px;
   border-bottom-color: #2a3f54;
-  -webkit-box-shadow: 0 10px 6px -6px #5087c15a;
-  -moz-box-shadow: 0 10px 6px -6px #5087c15a;
-  box-shadow: 0 15px 20px -10px #5087c15a;
+  -webkit-box-shadow: 0 10px 6px -6px #5087c11d;
+  -moz-box-shadow: 0 10px 6px -6px #5087c11d;
+  box-shadow: 0 15px 20px -10px #5087c11d;
 
   border-radius: 5px;
 }
 /* Estilos para modal general */
-
-/* Accordion */
-/* .accordion {
-  border-style: solid;
-  border-width: 1px;
-  margin-bottom: 20px;
-
-  border-top-color: transparent;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-bottom-color: #2a3f54;
-  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-.accordion-button:focus {
-  border-style: solid;
-  box-shadow: none;
-  border-color: #5087c15a;
-}
-
-.accordion-button {
-  background-color: #2a3f54;
-  color: #fff;
-}
-
-.accordion-body {
-  background-color: #2a3f54;
-  color: #fff;
-}
-
-.accordion-button:not(.collapsed) {
-  background-color: #fff !important;
-  color: #000 !important;
-} */
 
 .accordion-button:is(.collapsed)::after {
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='rgb(255, 255, 255)' width='16' height='16' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
@@ -1096,22 +1061,22 @@ select[type]:focus {
 
 /* Botón de edición */
 .custom-edit-btn {
-  background-color: #4caf50;
+  background-color: #2a3f54;
   color: white;
 }
 
 .custom-edit-btn:hover {
-  background-color: #45a049;
+  background-color: #2a3f54;
 }
 
 /* Botón de eliminación */
 .custom-delete-btn {
-  background-color: #f44336;
+  background-color: #2a3f54;
   color: white;
 }
 
 .custom-delete-btn:hover {
-  background-color: #e53935;
+  background-color: #2a3f54;
 }
 
 td {
